[tool.poetry]
name = "workshop-dozero"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["keitarojp"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
isort = "^5.13.2"
blue = "^0.9.1"
mypy = "^1.8.0"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.2"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.5"
pygments = "^2.17.2"
mkdocs-material = "^9.5.3"
pymdown-extensions = "^10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"